Amarok ChangeLog
================
(C) 2002-2024 the Amarok authors.

VERSION 3.1.1
  FEATURES:

  CHANGES:

  BUGFIXES:
   * Actually show the file browser panel toolbar

VERSION 3.1.0
  FEATURES:
  CHANGES:
  BUGFIXES:
   * Small UI and compilation fixes

VERSION 3.0.81
  FEATURES:
   * Last.fm plugin updated to use token-based authentication method and to notify
     user of session key errors (BR 414826, BR 327547)
   * Reintroducing Last.fm Similar Artists context applet - a new Amarok 3 version
   * Remember the previous destination provider when saving playlist (BR 216528)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.89.
   * Cleanup of unused code and various changes that improve Qt6 compatibility
     but shouldn't affect functionality. (n.b. Qt6 build won't succeed yet)
   * Remove old derelict openDesktop.org integrations from about dialog. This also
     removes the dependency to Attica framework.
   * Disable gapless playback if ReplayGain is active and the following track is
     not from same album, to avoid volume spikes due to delay in the applying of
     ReplayGain (BR 299461)

  BUGFIXES:
   * Fix saving and restoring playlist queue on quit / restart (BR 338741)
   * Fix system tray icon reordering
   * Fix erroneous apparent zero track progresses on track changes, which caused
     playcount updates and scrobbles to get skipped (BR 337849, 406701)
   * Fix 'save playlist' button in playlist controls
   * Sort playlist sorting breadcrumb menu by localized names (BR 277146)
   * Miscellaneous fixes to saving and loading various playlist file formats,
     resulting also in improved compatibility with other software
     (including BR 435779, BR 333745)
   * Don't show false reordering visual hints on a sorted playlist (BR 254821)
   * Fix multiple instances of web services appearing in Internet menu after saving
     plugin config.
   * Show podcast provider actions for non-empty podcast categories, too (BR 371192)