@@ -15,7 +15,7 @@
  ****************************************************************************************/
 
 import QtQuick 2.15
-import QtQuick.Dialogs 1.2
+import QtQuick.Dialogs 1.3
 import org.kde.kirigami 2.14 as Kirigami
 
 
